kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homesvc
  namespace: default
spec:
  selector:
    app: homesvc
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: homesvc
    protocol: TCP
    port: 3000
    targetPort: 3000
