kubernetes/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homesvc 
  namespace: default
spec:
  ingressClassName: nginx 
  rules:
  - host: api.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: homesvc 
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oldsystem 
            port:
              number: 80
